--- a/Perspective_Projection.vcxproj.filters
+++ b/Perspective_Projection.vcxproj.filters
@@ -22,6 +22,15 @@
     <Filter Include="Headerdateien\RenderPipeline\Renderable">
       <UniqueIdentifier>{a30495a6-d4a7-4d07-90a0-79b575fe758d}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Quelldateien\Matrix">
+      <UniqueIdentifier>{d239a70e-7d92-44e4-9c1d-86a2ba668a38}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Quelldateien\RenderPipeline">
+      <UniqueIdentifier>{b6e1aab5-3821-4e64-891f-7fa179eeceb2}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Quelldateien\RenderPipeline\Renderable">
+      <UniqueIdentifier>{86c3f57e-9194-4128-beb2-fe75ef63f964}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -30,32 +39,32 @@
     <ClCompile Include="Game.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
-    <ClCompile Include="Matrix3X3.cpp">
-      <Filter>Quelldateien</Filter>
+    <ClCompile Include="Matrix.cpp">
+      <Filter>Quelldateien\Matrix</Filter>
     </ClCompile>
     <ClCompile Include="Matrix3X1.cpp">
-      <Filter>Quelldateien</Filter>
+      <Filter>Quelldateien\Matrix</Filter>
     </ClCompile>
-    <ClCompile Include="Matrix.cpp">
-      <Filter>Quelldateien</Filter>
+    <ClCompile Include="Matrix3X3.cpp">
+      <Filter>Quelldateien\Matrix</Filter>
     </ClCompile>
     <ClCompile Include="MatrixOperations.cpp">
-      <Filter>Quelldateien</Filter>
-    </ClCompile>
-    <ClCompile Include="Point.cpp">
-      <Filter>Quelldateien</Filter>
-    </ClCompile>
-    <ClCompile Include="Pipeline.cpp">
-      <Filter>Quelldateien</Filter>
-    </ClCompile>
-    <ClCompile Include="RenderQueue.cpp">
-      <Filter>Quelldateien</Filter>
+      <Filter>Quelldateien\Matrix</Filter>
     </ClCompile>
     <ClCompile Include="Renderable.cpp">
-      <Filter>Quelldateien</Filter>
+      <Filter>Quelldateien\RenderPipeline\Renderable</Filter>
+    </ClCompile>
+    <ClCompile Include="RenderQueue.cpp">
+      <Filter>Quelldateien\RenderPipeline</Filter>
+    </ClCompile>
+    <ClCompile Include="Pipeline.cpp">
+      <Filter>Quelldateien\RenderPipeline</Filter>
     </ClCompile>
     <ClCompile Include="Cube.cpp">
-      <Filter>Quelldateien</Filter>
+      <Filter>Quelldateien\RenderPipeline\Renderable</Filter>
+    </ClCompile>
+    <ClCompile Include="Point.cpp">
+      <Filter>Quelldateien\RenderPipeline\Renderable</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
