--- a/Perspective_Projection.vcxproj.filters
+++ b/Perspective_Projection.vcxproj.filters
@@ -43,6 +43,9 @@
     <Filter Include="Quelldateien\RenderPipeline\Camera">
       <UniqueIdentifier>{cd570e5d-5695-442d-94dc-23681772aabc}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Headerdateien\ImGui">
+      <UniqueIdentifier>{3063e23a-d996-4097-bfd0-944763d602eb}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -87,6 +90,21 @@
     <ClCompile Include="Camera.cpp">
       <Filter>Quelldateien\RenderPipeline\Camera</Filter>
     </ClCompile>
+    <ClCompile Include="imgui\imgui.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui\imgui_draw.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui\imgui_tables.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui\imgui_widgets.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="imgui\imgui-SFML.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -103,9 +121,6 @@
     </ClInclude>
     <ClInclude Include="MatrixOperations.h">
       <Filter>Headerdateien\Matrix</Filter>
-    </ClInclude>
-    <ClInclude Include="resource.h">
-      <Filter>Headerdateien</Filter>
     </ClInclude>
     <ClInclude Include="Renderable.h">
       <Filter>Headerdateien\RenderPipeline\Renderable</Filter>
@@ -130,6 +145,36 @@
     </ClInclude>
     <ClInclude Include="Camera.h">
       <Filter>Headerdateien\RenderPipeline\Camera</Filter>
+    </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Headerdateien\ImGui</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imconfig.h">
+      <Filter>Headerdateien\ImGui</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imconfig-SFML.h">
+      <Filter>Headerdateien\ImGui</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imgui.h">
+      <Filter>Headerdateien\ImGui</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imgui_internal.h">
+      <Filter>Headerdateien\ImGui</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imgui-SFML.h">
+      <Filter>Headerdateien\ImGui</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imgui-SFML_export.h">
+      <Filter>Headerdateien\ImGui</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imstb_rectpack.h">
+      <Filter>Headerdateien\ImGui</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imstb_textedit.h">
+      <Filter>Headerdateien\ImGui</Filter>
+    </ClInclude>
+    <ClInclude Include="imgui\imstb_truetype.h">
+      <Filter>Headerdateien\ImGui</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
