--- a/Perspective_Projection.vcxproj.filters
+++ b/Perspective_Projection.vcxproj.filters
@@ -46,6 +46,9 @@
     <Filter Include="Headerdateien\ImGui">
       <UniqueIdentifier>{3063e23a-d996-4097-bfd0-944763d602eb}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Quelldateien\ImGui">
+      <UniqueIdentifier>{41180446-a083-479e-a56b-7c5ab0e67e46}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -90,19 +93,22 @@
     <ClCompile Include="Camera.cpp">
       <Filter>Quelldateien\RenderPipeline\Camera</Filter>
     </ClCompile>
+    <ClCompile Include="imgui\imgui-SFML.cpp">
+      <Filter>Quelldateien\ImGui</Filter>
+    </ClCompile>
     <ClCompile Include="imgui\imgui.cpp">
-      <Filter>Quelldateien</Filter>
+      <Filter>Quelldateien\ImGui</Filter>
     </ClCompile>
     <ClCompile Include="imgui\imgui_draw.cpp">
-      <Filter>Quelldateien</Filter>
+      <Filter>Quelldateien\ImGui</Filter>
     </ClCompile>
     <ClCompile Include="imgui\imgui_tables.cpp">
-      <Filter>Quelldateien</Filter>
+      <Filter>Quelldateien\ImGui</Filter>
     </ClCompile>
     <ClCompile Include="imgui\imgui_widgets.cpp">
-      <Filter>Quelldateien</Filter>
+      <Filter>Quelldateien\ImGui</Filter>
     </ClCompile>
-    <ClCompile Include="imgui\imgui-SFML.cpp">
+    <ClCompile Include="config.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
   </ItemGroup>
@@ -175,6 +181,9 @@
     </ClInclude>
     <ClInclude Include="imgui\imstb_truetype.h">
       <Filter>Headerdateien\ImGui</Filter>
+    </ClInclude>
+    <ClInclude Include="config.h">
+      <Filter>Headerdateien</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
