--- a/Perspective_Projection.vcxproj.filters
+++ b/Perspective_Projection.vcxproj.filters
@@ -43,11 +43,23 @@
     <Filter Include="Quelldateien\RenderPipeline\Camera">
       <UniqueIdentifier>{cd570e5d-5695-442d-94dc-23681772aabc}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Headerdateien\ImGui">
-      <UniqueIdentifier>{3063e23a-d996-4097-bfd0-944763d602eb}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Quelldateien\ImGui">
+    <Filter Include="Quelldateien\ImGuiFramework">
       <UniqueIdentifier>{41180446-a083-479e-a56b-7c5ab0e67e46}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Headerdateien\GUI">
+      <UniqueIdentifier>{44482f9d-b650-4641-ba68-5f847479008d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Quelldateien\GUI">
+      <UniqueIdentifier>{d1e263e7-da92-4b47-bb90-c8c27077baff}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Headerdateien\Management">
+      <UniqueIdentifier>{264ef154-e4c6-47e6-813d-0742f8618c59}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Quelldateien\Management">
+      <UniqueIdentifier>{d5904007-af15-4719-b629-c267632639c4}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Headerdateien\ImGuiFramework">
+      <UniqueIdentifier>{3063e23a-d996-4097-bfd0-944763d602eb}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -94,22 +106,31 @@
       <Filter>Quelldateien\RenderPipeline\Camera</Filter>
     </ClCompile>
     <ClCompile Include="imgui\imgui-SFML.cpp">
-      <Filter>Quelldateien\ImGui</Filter>
+      <Filter>Quelldateien\ImGuiFramework</Filter>
     </ClCompile>
     <ClCompile Include="imgui\imgui.cpp">
-      <Filter>Quelldateien\ImGui</Filter>
+      <Filter>Quelldateien\ImGuiFramework</Filter>
     </ClCompile>
     <ClCompile Include="imgui\imgui_draw.cpp">
-      <Filter>Quelldateien\ImGui</Filter>
+      <Filter>Quelldateien\ImGuiFramework</Filter>
     </ClCompile>
     <ClCompile Include="imgui\imgui_tables.cpp">
-      <Filter>Quelldateien\ImGui</Filter>
+      <Filter>Quelldateien\ImGuiFramework</Filter>
     </ClCompile>
     <ClCompile Include="imgui\imgui_widgets.cpp">
-      <Filter>Quelldateien\ImGui</Filter>
+      <Filter>Quelldateien\ImGuiFramework</Filter>
     </ClCompile>
     <ClCompile Include="config.cpp">
       <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="GUI.cpp">
+      <Filter>Quelldateien\GUI</Filter>
+    </ClCompile>
+    <ClCompile Include="ObjectHandler.cpp">
+      <Filter>Quelldateien\Management</Filter>
+    </ClCompile>
+    <ClCompile Include="AbstractObject.cpp">
+      <Filter>Quelldateien\Management</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -153,37 +174,46 @@
       <Filter>Headerdateien\RenderPipeline\Camera</Filter>
     </ClInclude>
     <ClInclude Include="resource.h">
-      <Filter>Headerdateien\ImGui</Filter>
+      <Filter>Headerdateien\ImGuiFramework</Filter>
     </ClInclude>
     <ClInclude Include="imgui\imconfig.h">
-      <Filter>Headerdateien\ImGui</Filter>
+      <Filter>Headerdateien\ImGuiFramework</Filter>
     </ClInclude>
     <ClInclude Include="imgui\imconfig-SFML.h">
-      <Filter>Headerdateien\ImGui</Filter>
+      <Filter>Headerdateien\ImGuiFramework</Filter>
     </ClInclude>
     <ClInclude Include="imgui\imgui.h">
-      <Filter>Headerdateien\ImGui</Filter>
+      <Filter>Headerdateien\ImGuiFramework</Filter>
     </ClInclude>
     <ClInclude Include="imgui\imgui_internal.h">
-      <Filter>Headerdateien\ImGui</Filter>
+      <Filter>Headerdateien\ImGuiFramework</Filter>
     </ClInclude>
     <ClInclude Include="imgui\imgui-SFML.h">
-      <Filter>Headerdateien\ImGui</Filter>
+      <Filter>Headerdateien\ImGuiFramework</Filter>
     </ClInclude>
     <ClInclude Include="imgui\imgui-SFML_export.h">
-      <Filter>Headerdateien\ImGui</Filter>
+      <Filter>Headerdateien\ImGuiFramework</Filter>
     </ClInclude>
     <ClInclude Include="imgui\imstb_rectpack.h">
-      <Filter>Headerdateien\ImGui</Filter>
+      <Filter>Headerdateien\ImGuiFramework</Filter>
     </ClInclude>
     <ClInclude Include="imgui\imstb_textedit.h">
-      <Filter>Headerdateien\ImGui</Filter>
+      <Filter>Headerdateien\ImGuiFramework</Filter>
     </ClInclude>
     <ClInclude Include="imgui\imstb_truetype.h">
-      <Filter>Headerdateien\ImGui</Filter>
+      <Filter>Headerdateien\ImGuiFramework</Filter>
     </ClInclude>
     <ClInclude Include="config.h">
       <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="GUI.h">
+      <Filter>Headerdateien\GUI</Filter>
+    </ClInclude>
+    <ClInclude Include="AbstractObject.h">
+      <Filter>Headerdateien\Management</Filter>
+    </ClInclude>
+    <ClInclude Include="ObjectHandler.h">
+      <Filter>Headerdateien\Management</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
