--- a/imgui.ini
+++ b/imgui.ini
@@ -1,10 +1,25 @@
 [Window][Debug##Default]
-Pos=60,60
-Size=400,400
+Pos=203,160
+Size=300,300
 Collapsed=0
 
 [Window][Object Browser]
-Pos=16,129
-Size=552,337
+Pos=10,30
+Size=300,500
+Collapsed=0
+
+[Window][Game Ojects]
+Pos=242,86
+Size=224,71
+Collapsed=0
+
+[Window][Object Attributes]
+Pos=1710,30
+Size=420,1160
+Collapsed=0
+
+[Window][Diagnostics]
+Pos=1400,30
+Size=300,70
 Collapsed=0
 
