--- a/Perspective_Projection/Perspective_Projection.vcxproj
+++ b/Perspective_Projection/Perspective_Projection.vcxproj
@@ -164,6 +164,7 @@
     <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="ObjectHandler.cpp" />
     <ClCompile Include="Pipeline.cpp" />
+    <ClCompile Include="Plane.cpp" />
     <ClCompile Include="Point.cpp" />
     <ClCompile Include="Renderable.cpp" />
     <ClCompile Include="RenderQueue.cpp" />
@@ -195,6 +196,7 @@
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="ObjectHandler.h" />
     <ClInclude Include="Pipeline.h" />
+    <ClInclude Include="Plane.h" />
     <ClInclude Include="Point.h" />
     <ClInclude Include="Renderable.h" />
     <ClInclude Include="RenderQueue.h" />
