--- a/Perspective_Projection/Perspective_Projection.vcxproj
+++ b/Perspective_Projection/Perspective_Projection.vcxproj
@@ -145,42 +145,25 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="AbstractObject.cpp" />
-    <ClCompile Include="Camera.cpp" />
-    <ClCompile Include="config.cpp" />
-    <ClCompile Include="Cube.cpp" />
-    <ClCompile Include="Game.cpp" />
-    <ClCompile Include="GUI.cpp" />
+    <ClCompile Include="Entity.cpp" />
+    <ClCompile Include="src\ecs\Scene.cpp" />
+    <ClCompile Include="src\ecs\component\CameraComponent.h" />
+    <ClCompile Include="src\ecs\component\Component.cpp" />
     <ClCompile Include="imgui\imgui-SFML.cpp" />
     <ClCompile Include="imgui\imgui.cpp" />
     <ClCompile Include="imgui\imgui_draw.cpp" />
     <ClCompile Include="imgui\imgui_tables.cpp" />
     <ClCompile Include="imgui\imgui_widgets.cpp" />
-    <ClCompile Include="main.cpp" />
-    <ClCompile Include="Matrix.cpp" />
-    <ClCompile Include="Matrix3X3.cpp" />
-    <ClCompile Include="Matrix3X1.cpp" />
-    <ClCompile Include="MatrixOperations.cpp" />
-    <ClCompile Include="Mesh.cpp" />
-    <ClCompile Include="ObjectHandler.cpp" />
-    <ClCompile Include="Pipeline.cpp" />
-    <ClCompile Include="Plane.cpp" />
-    <ClCompile Include="Point.cpp" />
-    <ClCompile Include="Renderable.cpp" />
-    <ClCompile Include="RenderQueue.cpp" />
-    <ClCompile Include="Ressources.cpp" />
-    <ClCompile Include="Texture.cpp" />
-    <ClCompile Include="Textured.cpp" />
-    <ClCompile Include="Triangle.cpp" />
-    <ClCompile Include="WavefrontObj.cpp" />
+    <ClCompile Include="src\ecs\component\MeshComponent.h" />
+    <ClCompile Include="src\ecs\component\PointComponent.h" />
+    <ClCompile Include="src\ecs\component\TextureComponent.h" />
+    <ClCompile Include="src\ecs\component\TransformComponent.h" />
+    <ClCompile Include="src\ecs\component\TriangleComponent.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="AbstractObject.h" />
-    <ClInclude Include="Camera.h" />
-    <ClInclude Include="config.h" />
-    <ClInclude Include="Cube.h" />
-    <ClInclude Include="Game.h" />
-    <ClInclude Include="GUI.h" />
+    <ClInclude Include="Entity.h" />
+    <ClInclude Include="src\ecs\Scene.h" />
+    <ClInclude Include="src\ecs\component\Component.h" />
     <ClInclude Include="imgui\imconfig-SFML.h" />
     <ClInclude Include="imgui\imconfig.h" />
     <ClInclude Include="imgui\imgui-SFML.h" />
@@ -190,23 +173,7 @@
     <ClInclude Include="imgui\imstb_rectpack.h" />
     <ClInclude Include="imgui\imstb_textedit.h" />
     <ClInclude Include="imgui\imstb_truetype.h" />
-    <ClInclude Include="Matrix.h" />
-    <ClInclude Include="Matrix3X3.h" />
-    <ClInclude Include="Matrix3X1.h" />
-    <ClInclude Include="MatrixOperations.h" />
-    <ClInclude Include="Mesh.h" />
-    <ClInclude Include="ObjectHandler.h" />
-    <ClInclude Include="Pipeline.h" />
-    <ClInclude Include="Plane.h" />
-    <ClInclude Include="Point.h" />
-    <ClInclude Include="Renderable.h" />
-    <ClInclude Include="RenderQueue.h" />
     <ClInclude Include="resource.h" />
-    <ClInclude Include="Ressources.h" />
-    <ClInclude Include="Texture.h" />
-    <ClInclude Include="Textured.h" />
-    <ClInclude Include="Triangle.h" />
-    <ClInclude Include="WavefrontObj.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Perspective_Projection.rc" />
